...
    <item
        android:id="@+id/bab_chat"
        android:icon="@drawable/ic_chat"
        android:title="Messages" />

    <item
        android:id="@+id/bab_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />


</menu>
